<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_actionbar"
        android:fitsSystemWindows="true"
        android:clipToPadding="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="导线材质:"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/wire_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <RadioButton
                android:id="@+id/copper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copper"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:id="@+id/aluminum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aluminum"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="电阻温度常数T:"
            android:textSize="16sp"
            android:id="@+id/textView4" />

        <TextView
            android:id="@+id/RTC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="温度T1:"
            android:textSize="16sp"/>
        <com.xsinwa.scaleunit.ui.MyEditText
            android:id="@+id/T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="温度T2:"
            android:textSize="16sp"/>
        <com.xsinwa.scaleunit.ui.MyEditText
            android:id="@+id/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="T1下的电阻值R1:"
            android:textSize="16sp"/>
        <com.xsinwa.scaleunit.ui.MyEditText
            android:id="@+id/R1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="T2下的电阻值R2:"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/R2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape"
            android:textSize="16sp"
            android:hint="换算结果显示"/>
    </LinearLayout>

    <Button
        android:id="@+id/Drc_transform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/transform"
        android:textSize="16sp"
        android:background="@drawable/button_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="历史记录"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Drc_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/edittext_shape"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"></android.support.v7.widget.RecyclerView>
</LinearLayout>